# ticketbox-program

./: .gitignore  Anchor.toml  README.md  package.json
idls/: ticketbox.ts
programs/ticketbox/: Cargo.toml
programs/ticketbox/src/: errors.rs  events.rs  instructions.rs  lib.rs  math.rs  state.rs
programs/ticketbox/src/instructions/: buy_ticket.rs  deposit_ticket_token.rs  initialize_config.rs  update_authority.rs  update_dev_vault.rs  update_maker_vault.rs  update_percents.rs  update_ticket_price.rs  withdraw_ticket_token.rs
programs/ticketbox/src/state/: ticketbox_config.rs
tests/: ticketbox.spec.ts
tests/utils/: const.ts  token.ts
