[package]
name = "ticketbox"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketbox"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = { version = "=4.0.1", features = ["no-entrypoint"] }
solana-program = { version = "=1.17.22" }
